# cds-language-analytics-2025

assignments/assignment_1/: .gitignore  README.md  assignment_1_guidelines.md  expected_knowledge.md  pyproject.toml  run.sh  setup.sh
assignments/assignment_1/data/use-corpus/: ReadMe.txt  USE_data_manual.md  USEdatabase.xls
assignments/assignment_1/output/: a1.csv  a2.csv  a3.csv  a4.csv  a5.csv  b1.csv  b2.csv  b3.csv  b4.csv  b5.csv  b6.csv  b7.csv  b8.csv  c1.csv
assignments/assignment_1/src/: main.py
assignments/assignment_2/: README.md  assignment_2_guidelines.md  config.yaml  expected_knowledge.md  pyproject.toml  run.sh  setup.sh
assignments/assignment_2/data/: README.md
assignments/assignment_2/data/vectorized/: vectorizer.pkl  y_test.npy  y_train.npy
assignments/assignment_2/models/: logistic_regression.pkl  naive_bayes.pkl
assignments/assignment_2/output/: neural_network_report.txt
assignments/assignment_2/output/models/: logistic_regression.pkl
assignments/assignment_2/output/reports/: logistic_regression_report.txt  model_comparison.csv  naive_bayes_report.txt
assignments/assignment_2/results/: model_comparison.csv
assignments/assignment_2/src/: main.py  settings.py
assignments/assignment_2/src/data_processing/: vectorize_data.py
assignments/assignment_2/src/trainers/: train_logistic_regression.py  train_naive_bayes.py  train_neural_network.py
assignments/assignment_2/src/utils/: common.py  data_utils.py  logger.py  model_utils.py  result_utils.py  trainer_utils.py  vectorization_utils.py  visualization.py  visualization_utils.py
assignments/assignment_3/: .gitignore  README.md  assignment_3_guideslines.md  pyproject.toml  run.sh  setup.sh
assignments/assignment_3/models/: gutenberg-model-1gram.json
assignments/assignment_3/src/config/: settings.py
assignments/assignment_4/: README.md  assignment_4_guidelines.md  pyproject.toml  run.sh  setup.sh
assignments/assignment_4/output/: analysis_summary.txt
assignments/assignment_4/src/: main.py
assignments/assignment_5/: .gitignore  README.md  REPORT.md  assignment_5_guidelines.md  pyproject.toml  run.sh  setup.sh
assignments/assignment_5/src/: main.py  settings.py
assignments/example/: README.md  run.sh  (+1 more)
(+15 files in other folders)
