[project]
name = "ngram-language-model"
version = "0.1.0"
description = "N-gram language model for text generation"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "click>=8.1.0",
    "nltk>=3.9.1",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
