[project]
name = "assignment-5"
version = "0.1.0"
description = "Nutritional Quality Prediction from Product Names"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "torch",
    "transformers[torch]",
    "datasets",
    "requests",
    "pydantic-settings>=2.9.1",
    "click>=8.1.8",
    "scikit-optimize>=0.10.2",
]
